--- a/2024/estagiarios/Makefile
+++ b/2024/estagiarios/Makefile
@@ -1,9 +1,5 @@
 FILE=main
 
-# Arquivo para gerar abreviaturas 
-# As vezes é necessário passar o caminho absoluto /usr/share etc.
-NOMENCL=nomencl.ist
-
 .PHONY: fast clean
 
 # Dica: pode-se usar batchmode ao invés de nonstopmode.
@@ -11,17 +7,12 @@ NOMENCL=nomencl.ist
 fast:
 	pdflatex -interaction=nonstopmode -halt-on-error $(FILE).tex 
 	pdflatex -interaction=nonstopmode -halt-on-error $(FILE).tex
-	makeindex $(FILE).nlo -s $(NOMENCL) -o $(FILE).nls
-	makeindex $(FILE).nlo -s $(NOMENCL) -o $(FILE).nls
-	pdflatex -interaction=nonstopmode -halt-on-error $(FILE).tex
-	bibtex $(FILE).aux
-	pdflatex -interaction=nonstopmode -halt-on-error $(FILE).tex
 	pdflatex -interaction=nonstopmode -halt-on-error $(FILE).tex
 	make clean
 	
 clean:
-	rm -rf *.aux *.bbl *.toc *.out *.log *.nls *.nlo \
+	rm -rf *.aux *.bbl *.toc *.out *.log *.nls *.nlo *.snm *.nav \
                *.lof *.lot *.blg *.ilg *.synctex.gz
-	rm -rf */*.aux */*.bbl */*.toc */*.out */*.log   \
+	rm -rf */*.aux */*.bbl */*.toc */*.out */*.log */*.snm */*.nav \
                */*.nls */*.nlo */*.lof */*.lot */*.blg */*.ilg */*.synctex.gz
 	rm -rf *~ */*~
